--- a/scripts/configs/config_birdCOM.yaml
+++ b/scripts/configs/config_birdCOM.yaml
@@ -8,7 +8,7 @@ data:
     height: 384
     width: 384
   # ABSOLUTE path to data directory
-  data_dir: data/chickadee_example
+  data_dir: data/chickadee-example
   # ABSOLUTE path to unlabeled videos' directory
   video_dir: null
   # location of labels; this should be relative to `data_dir`
